# drifty

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.drifty/: config.yaml
.github/workflows/: publish.yml  report-pr.yml
drifty/: __init__.py  cli.py  cloudtrail.py  config.py  github.py  history.py  ignore.py  reporter.py  scanner.py  scorer.py  state.py  watch.py
drifty/.github/workflows/: publish.yml  test.yml
drifty/notifiers/: __init__.py  slack.py
tests/: test_cloudtrail.py  test_github.py  test_history.py  test_ignore.py  test_notifiers.py  test_scanner.py  test_scorer.py  test_state.py  test_watch.py
tests/fixtures/: sample.tfstate
