[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "drifty"
version = "0.6.3"
description = "Terraform drift intelligence: detect, attribute, score, and fix IaC drift"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Satyajit Dey", email = "satyajit.dey@umbc.edu" }
]
keywords = ["terraform", "drift", "devops", "sre", "infrastructure", "iac"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "typer[all]>=0.12,<1.0",
    "rich>=13.0,<15.0",
    "boto3>=1.34,<2.0",
    "pyyaml>=6.0,<7.0",
    "httpx (>=0.28.1,<0.29.0)",
]

[project.urls]
Homepage = "https://github.com/satyajit-dey-17/drifty"
Repository = "https://github.com/satyajit-dey-17/drifty"
"Bug Tracker" = "https://github.com/satyajit-dey-17/drifty/issues"

[project.scripts]
drifty = "drifty.cli:app"

[tool.poetry]
packages = [{ include = "drifty" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
moto = { version = ">=5.0,<6.0", extras = ["cloudtrail", "s3"] }
black = ">=24.0,<25.0"
ruff = ">=0.4,<1.0"
pytest-cov = ">=5.0,<6.0"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:typer",
]
